src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.wrapper {
    max-width: 1240px;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
}


:root {
    --white: #ffffff;
    --black: #000000;
    --black-taupe: #3B3B3D;
    --accent-color: #FF0381;
}

html {
    scroll-behavior: smooth;
    scroll-padding: 100px;
}

body.scroll-down header:not(.mobile-menu-open) {
    transform: translateY(-100%);
}

body.scroll-up header:not(.mobile-menu-open) {
    transform: translateY(0);
}

body.scroll header:not(.mobile-menu-open) {
    background-color: var(--black-taupe);
    & nav {
        background-color: transparent;
        color: var(--white);
    }
}

h1, .h1 {
    font-size: 80px;
}

h2, .h2 {
    font-size: 70px;
}

h3, .h3 {
    font-size: 22px;
    font-weight: 500;
}

.font-montserrat {
    font-family: var(--font-montserrat);
}

.font-poppins {
    font-family: var(--font-poppins);
}

.font-staatliches {
    font-family: var(--font-staatliches);
}

p {
    font-size: 18px;
}


.section-margin {
    margin-top: 150px;
    margin-bottom: 150px;
}

.section-margin:first-child {
    margin-top: 0;
}


.btn {
    color: white;
    padding: 15px 20px;
    background-color: #ff03819c;
    border-radius: 12px;
    font-size: 18px;
    display: inline-flex;
    transition: 0.3s;

    &:hover {
        background-color: var(--accent-color);
    }
}

.title-gradient {
    background-image: linear-gradient(180deg, #FF0381 0%, #FF2F76 36.98%, #F5831B 84.37%, #FBBC05 98.53%);
    color: transparent;
    background-clip: text;
}

.title-line {
    position: relative;
    display: inline-block;
}
.title-line:before {
    content: "";
    left: -100px;
    right: -100px;
    bottom: -50px;
    height: 150px;
    position: absolute;
    background-image: url('/images/title-line.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center bottom;
    z-index: -1;
}

.bg-linear {
    background: linear-gradient(264deg, #FF0381 -24.85%, #FF2F76 23.42%, #F5831B 85.29%, #FBBC05 103.76%);
}

input[type=checkbox] {
    position: relative;
    border: 2px solid var(--white);
    border-radius: 3px;
    background: transparent;
    cursor: pointer;
    padding: 8px;
    height: 20px;
    width: 20px;
    appearance: none;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.2s;
}


input[type=checkbox]:checked {
    background-color: var(--accent-color);
}
input[type=checkbox]:checked:before {
    border-color: var(--white);

}
input[type=checkbox]:before {
    content: "";
    position: absolute;
    width: 6px;
    height: 12px;
    border: solid transparent;
    border-width: 0 2px 2px 0;
    margin: -3px -1px 0 -1px;
    transform: rotate(45deg);
    z-index: 2;
    transition: 0.2s;
}

